--- a/app/src/main/res/layout/activity_connect_to_game.xml
+++ b/app/src/main/res/layout/activity_connect_to_game.xml
@@ -34,7 +34,7 @@
             android:text="Game ID: " />
 
         <EditText
-            android:id="@+id/editTextTextPersonName"
+            android:id="@+id/gameID"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
@@ -44,7 +44,7 @@
     </LinearLayout>
 
     <Button
-        android:id="@+id/button5"
+        android:id="@+id/connectBtn"
         style="@style/ownButton"
         android:layout_marginTop="160dp"
         android:layout_gravity="center"
