--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -31,7 +31,7 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/textView10"
+                android:id="@+id/gameID"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="20dp"
@@ -51,7 +51,7 @@
                     android:text="Topic: " />
 
                 <TextView
-                    android:id="@+id/textView19"
+                    android:id="@+id/topicName"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="20dp"
@@ -86,7 +86,7 @@
             android:text="Speaking: " />
 
         <TextView
-            android:id="@+id/textView21"
+            android:id="@+id/speakerName"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:textSize="20dp"/>
