--- a/app/src/main/res/layout/activity_game_over.xml
+++ b/app/src/main/res/layout/activity_game_over.xml
@@ -22,7 +22,7 @@
             android:text="The winner is " />
 
         <TextView
-            android:id="@+id/textView19"
+            android:id="@+id/winnerName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="20dp"
@@ -48,7 +48,7 @@
         android:dividerHeight="20dp"/>
 
     <Button
-        android:id="@+id/button9"
+        android:id="@+id/backBtn"
         style="@style/ownButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
