--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -15,7 +15,7 @@
         android:layout_gravity="center"/>
 
     <Button
-        android:id="@+id/logBtn"
+        android:id="@+id/loginBtn"
         android:layout_width="200sp"
         android:layout_marginTop="130sp"
         android:layout_height="60sp"
@@ -25,7 +25,7 @@
         android:text="Login" />
 
     <Button
-        android:id="@+id/regBtn"
+        android:id="@+id/registerBtn"
         android:layout_width="200sp"
         android:layout_margin="40sp"
         android:layout_height="60sp"
