--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -9,7 +9,7 @@
 
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/backBtn"
         style="@style/ownButton"
         android:layout_width="80dp"
         android:layout_height="wrap_content"
@@ -36,7 +36,7 @@
             android:text="Username: " />
 
         <EditText
-            android:id="@+id/editTextTextPersonName"
+            android:id="@+id/userName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
@@ -60,18 +60,19 @@
             android:text="Password: " />
 
         <EditText
-            android:id="@+id/editTextTextPersonName2"
+            android:id="@+id/userPass"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:ems="10"
             android:layout_marginRight="40dp"
-            android:inputType="textPersonName"
-            android:text="Name" />
+            android:inputType="textPassword" />
+
+
     </LinearLayout>
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/loginBtn"
         style="@style/ownButton"
         android:layout_width="150dp"
         android:layout_height="60dp"
