--- a/app/src/main/res/layout/activity_my_profile.xml
+++ b/app/src/main/res/layout/activity_my_profile.xml
@@ -52,7 +52,7 @@
             android:text="Name: " />
 
         <TextView
-            android:id="@+id/textView8"
+            android:id="@+id/userName"
             android:layout_width="80dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -83,7 +83,7 @@
             android:orientation="vertical">
 
             <ImageView
-                android:id="@+id/imageView2"
+                android:id="@+id/userAvatar"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -91,7 +91,7 @@
                 tools:srcCompat="@tools:sample/avatars" />
 
             <Button
-                android:id="@+id/button7"
+                android:id="@+id/avatarBtn"
                 style="@style/ownButton"
                 android:layout_gravity="center"
                 android:textSize="10dp"
@@ -121,7 +121,7 @@
             android:text="Points:" />
 
         <TextView
-            android:id="@+id/textView12"
+            android:id="@+id/userPoints"
             android:layout_width="195dp"
             android:layout_height="wrap_content"
             android:textSize="20dp"
@@ -144,7 +144,7 @@
             android:text="Games played:" />
 
         <TextView
-            android:id="@+id/textView14"
+            android:id="@+id/userGamesPlayed"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="20dp" />
@@ -166,7 +166,7 @@
             android:text="Achievements earned:" />
 
         <TextView
-            android:id="@+id/textView16"
+            android:id="@+id/userAchievements"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
