--- a/app/src/main/res/layout/activity_waiting.xml
+++ b/app/src/main/res/layout/activity_waiting.xml
@@ -13,7 +13,7 @@
         android:orientation="horizontal">
 
         <Button
-            android:id="@+id/button"
+            android:id="@+id/backBtn"
             style="@style/ownButton"
             android:layout_width="80dp"
             android:layout_height="wrap_content"
@@ -24,7 +24,7 @@
             android:textSize="10dp" />
 
         <TextView
-            android:id="@+id/textView3"
+            android:id="@+id/gameID"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="40dp"
@@ -49,7 +49,7 @@
             android:text="Topic: "/>
 
         <Spinner
-            android:id="@+id/spinner"
+            android:id="@+id/topicOptions"
             android:layout_marginRight="40dp"
             android:layout_width="120dp"
             android:layout_height="wrap_content"
@@ -71,7 +71,7 @@
         android:layout_margin="20dp"/>
 
     <Button
-        android:id="@+id/button6"
+        android:id="@+id/startBtn"
         android:layout_marginTop="20dp"
         android:layout_width="150dp"
         android:layout_gravity="center"
