--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -65,5 +65,6 @@
         android:layout_marginTop="100dp"
         android:layout_gravity="center"
         android:layout_height="60dp"
+        android:onClick="toTopic"
         android:text="Topics" />
 </LinearLayout>
