--- a/app/src/main/res/layout/activity_topic.xml
+++ b/app/src/main/res/layout/activity_topic.xml
@@ -32,8 +32,7 @@
         android:layout_width="match_parent"
         android:textSize="15dp"
         android:layout_marginLeft="30dp"
-        android:layout_height="wrap_content"
-        android:text="TextView" />
+        android:layout_height="wrap_content" />
 
     <EditText
         android:id="@+id/newTopic"
