--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -92,8 +92,7 @@
                 android:layout_weight="9" />
 
             <ImageButton
-                android:tag="1"
-                android:id="@+id/btnRecord1"
+                android:id="@+id/btnRecord"
                 android:layout_width="51sp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -106,7 +105,7 @@
                 tools:srcCompat="@drawable/voice_record_bw" />
 
             <ImageButton
-                android:id="@+id/btnPlayer1"
+                android:id="@+id/btnPlayer"
                 android:layout_width="51sp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -114,19 +113,17 @@
                 android:backgroundTint="#03FFFFFF"
                 android:onClick="btnPlayOnClick"
                 android:scaleType="fitCenter"
-                android:tag="1"
                 app:srcCompat="@drawable/play_bw"
                 tools:ignore="SpeakableTextPresentCheck" />
 
             <ImageButton
-                android:tag="1"
-                android:id="@+id/btnRating1"
+                android:id="@+id/btnRating"
                 android:layout_width="51sp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:adjustViewBounds="true"
                 android:backgroundTint="#03FFFFFF"
-                android:onClick="btnPlayOnClick"
+                android:onClick="btnRateOnClick"
                 android:scaleType="fitCenter"
                 app:srcCompat="@drawable/star_bw"
                 tools:ignore="SpeakableTextPresentCheck" />
@@ -162,7 +159,6 @@
                 android:layout_weight="9" />
 
             <ImageButton
-                android:tag="2"
                 android:id="@+id/btnRecord2"
                 android:layout_width="51sp"
                 android:layout_height="wrap_content"
@@ -176,7 +172,6 @@
                 tools:srcCompat="@drawable/voice_record_bw" />
 
             <ImageButton
-                android:tag="2"
                 android:id="@+id/btnPlayer2"
                 android:layout_width="51sp"
                 android:layout_height="wrap_content"
@@ -189,14 +184,13 @@
                 tools:ignore="SpeakableTextPresentCheck" />
 
             <ImageButton
-                android:tag="1"
                 android:id="@+id/btnRating2"
                 android:layout_width="51sp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:adjustViewBounds="true"
                 android:backgroundTint="#03FFFFFF"
-                android:onClick="btnPlayOnClick"
+                android:onClick="btnRateOnClick"
                 android:scaleType="fitCenter"
                 app:srcCompat="@drawable/star_bw"
                 tools:ignore="SpeakableTextPresentCheck" />
@@ -231,7 +225,6 @@
                 android:layout_weight="9" />
 
             <ImageButton
-                android:tag="3"
                 android:id="@+id/btnRecord3"
                 android:layout_width="51sp"
                 android:layout_height="wrap_content"
@@ -245,7 +238,6 @@
                 tools:srcCompat="@drawable/voice_record_bw" />
 
             <ImageButton
-                android:tag="3"
                 android:id="@+id/btnPlayer3"
                 android:layout_width="51sp"
                 android:layout_height="wrap_content"
@@ -258,14 +250,13 @@
                 tools:ignore="SpeakableTextPresentCheck" />
 
             <ImageButton
-                android:tag="3"
                 android:id="@+id/btnRating3"
                 android:layout_width="51sp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:adjustViewBounds="true"
                 android:backgroundTint="#03FFFFFF"
-                android:onClick="btnPlayOnClick"
+                android:onClick="btnRateOnClick"
                 android:scaleType="fitCenter"
                 app:srcCompat="@drawable/star_bw"
                 tools:ignore="SpeakableTextPresentCheck" />
@@ -300,7 +291,6 @@
                 android:layout_weight="9" />
 
             <ImageButton
-                android:tag="4"
                 android:id="@+id/btnRecord4"
                 android:layout_width="51sp"
                 android:layout_height="wrap_content"
@@ -314,7 +304,6 @@
                 tools:srcCompat="@drawable/voice_record_bw" />
 
             <ImageButton
-                android:tag="4"
                 android:id="@+id/btnPlayer4"
                 android:layout_width="51sp"
                 android:layout_height="wrap_content"
@@ -327,14 +316,13 @@
                 tools:ignore="SpeakableTextPresentCheck" />
 
             <ImageButton
-                android:tag="4"
                 android:id="@+id/btnRating4"
                 android:layout_width="51sp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:adjustViewBounds="true"
                 android:backgroundTint="#03FFFFFF"
-                android:onClick="btnPlayOnClick"
+                android:onClick="btnRateOnClick"
                 android:scaleType="fitCenter"
                 app:srcCompat="@drawable/star_bw"
                 tools:ignore="SpeakableTextPresentCheck" />
